--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,13 @@
-body {
-  margin: 0px;
-  padding: 0px;
-  width: 100vw;
-  height: 100vh;
-}
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 
-#app {
-  width: 100%;
-  height: 100%;
-}
+  canvas {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
